<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C1F45"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/view_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#673AB7"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="15dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/my_photo_description"
        android:cropToPadding="false"
        app:srcCompat="@mipmap/my_personal_photo" />

    <EditText
        android:id="@+id/editText_hobbies"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/type_your_hobby_here"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#878787"
        android:importantForAutofill="no"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_addHobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="UpdateHobby"
        android:text="@string/button_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_hobby"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="360dp"
        android:layout_height="200dp"
        android:background="@drawable/border"
        android:fadeScrollbars="false"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:id="@+id/TextView_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_info"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </ScrollView>

</LinearLayout>
